2006-06-13  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* pdf_stat.tcl: check for existence of argv0 - child interpreters
	* plotstat.tcl: ditto
	* statistics.tcl: ditto

2006-03-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* math.man: Fixed name of romberg package, resorted the list,
	  slight reformatting of items with regard to right margin.

2006-03-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* math.man: Added a bit of markup to the package list for better
	  cross-referencing.

	* statistics.man: Fixed unclosed bracket.

2006-03-28  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* calculus.tcl (integral2D and integral3D): Fixed a bug concerning
	  intervals that do not start at 0.0
	* calculus.tcl (integral2D and integral3D): Added accurate versions
	  for integration over rectangles and blocks (exact for polynomials
	  of degree 3 or less).
	* statistics.tcl (test-normal): Added implementation of normality test
	  by Torsten Reincke (as it appeared on the Wiki)

2006-03-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Resynchronized the ifneeded/provide version
	  information for math::bignum.

2006-02-21  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* linalg.tcl (matmul): Fixed [SF Tcllib Bug xxxxxxx]. The bug
	  concerns the possibility of using row vectors. Because I
	  did not think they were possible/practical, I regarded all
	  vectors as column vectors or row vectors whenever suitable.
	  Row vectors are however practical, so I needed to add these
	  cases, at least for [matmul].

2006-02-13  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* bignum.tcl (rshift): Fixed [SF Tcllib Bug 1098051]. (Solution
	  provided by Lars Hellstrom. Added tests for both rshift and lshift)

2006-01-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bignum.tcl (testbit): Fixed [SF Tcllib Bug 1085562]. Thanks to