@@ -140,6 +140,10 @@ test norm-2.2 "matrix-norm - 2x2 - 2" -match numbers -body {
     normMatrix {{1 -1} {1 1}} 2
 } -result 2
 
+test norm-3.0 "statistical normalisation - vector" -match numbers -body {
+    normalizeStat {1 0 0 0}
+} -result {1.5 -0.5 -0.5 -0.5}
+
 test dotproduct-1.0" "dot-product - 2 components" -match numbers -body {
     dotproduct {1 -1} {1 -1}
 } -result 2.0
